--- a/.github/workflows/wakatime.yaml
+++ b/.github/workflows/wakatime.yaml
@@ -23,3 +23,4 @@ jobs:
           SHOW_LOC_CHART: "True"
           SHOW_SHORT_INFO: "True"
           SHOW_PROJECTS: "True"
+          SHOW_LINES_OF_CODE: "True"
