--- a/.github/workflows/wakatime.yaml
+++ b/.github/workflows/wakatime.yaml
@@ -27,3 +27,7 @@ jobs:
           SHOW_LOC_CHART: "False"
           LOCALE: "en"
           SHOW_OS: "False"
+          SHOW_DAYS_OF_WEEK: "False"
+          SHOW_COMMIT: "False"
+          COMMIT_MESSAGE: "Updated with Wakatime Metrics"
+          COMMIT_USERNAME: "wakatime-bot"
