--- a/.github/workflows/wakatime.yaml
+++ b/.github/workflows/wakatime.yaml
@@ -3,8 +3,8 @@ name: Waka Readme
 on:
   workflow_dispatch:
   schedule:
-    # Runs at every 12AM UTC
-    - cron: "0 0 * * *"
+    # Runs at 12am IST
+    - cron: '30 18 * * *'
   push:
       branches:
         - master
@@ -25,7 +25,7 @@ jobs:
           SHOW_PROJECTS: "False"
           SHOW_LINES_OF_CODE: "True"
           SHOW_LOC_CHART: "False"
-          LOCALE: "en"
+          LOCALE: "en_IN"
           SHOW_OS: "False"
           SHOW_DAYS_OF_WEEK: "False"
           SHOW_COMMIT: "False"
