--- a/.github/workflows/wakatime.yaml
+++ b/.github/workflows/wakatime.yaml
@@ -25,7 +25,7 @@ jobs:
           SHOW_PROJECTS: "False"
           SHOW_LINES_OF_CODE: "True"
           SHOW_LOC_CHART: "False"
-          LOCALE: "en_IN"
+          LOCALE: "en"
           SHOW_OS: "False"
           SHOW_DAYS_OF_WEEK: "False"
           SHOW_COMMIT: "False"
