--- a/.github/recent-activity.config.yml
+++ b/.github/recent-activity.config.yml
@@ -5,7 +5,7 @@ settings:
   disabled_events: [create_repo, fork]
   url_text: "{REPO}{ID}"
   ignored_repos:
-    - Dhanus3133/
+    - Dhanus3133/Dhanus3133
   date:
     timezone: "GMT+5:30"
     text: "Last Updated: {DATE}"
